@@ -24,6 +24,8 @@
 	* adding RubyDebugEvent.isStepping()
 	* synchronization fixes
 	* Fixed RubyThread.stepReturn()
+	* Fixed IOE when process is terminated by client before connection is
+	  established.
 
 0.7.1 - 0.7.2
 -------------
